# goggle-trans

./: .gitignore  README.md  index.html  package-lock.json  package.json  server.js  vite.config.js
.github/workflows/: codeql-analysis.yml
docs/: CNAME
oldsrc/: index.html
oldsrc/css/: history.css  index.css
oldsrc/uiblox/: uiblox.js
public/: index.html  uiblox.css
src/: dataController.js  index.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns  installer_banner.pdn  installer_bg.pdn
src-tauri/src/: google_translate.rs  history.html  index.html  main.rs  textgentrans.html
src-tauri/src/css/: index.css
src-tauri/src/js/: index.js  ky.min.js  textgentrans.js
src-tauri/src/uiblox/: jquery.module.js  uiblox.css
src/common/: dataController.js  languages.js  store.js  translate.js  util.js
src/common/slices/: history.js  settings.js  updater.js
src/components/: Accordion.jsx  App.jsx  Button.jsx  Card.jsx  Generator.jsx  Grid.jsx  Header.jsx  Link.jsx  Main.jsx  Navigation.jsx  SpanEditable.jsx  Spinner.jsx  Toggle.jsx  Translation.jsx  Typography.jsx  WindowButtons.jsx
src/localization/: index.js
src/localization/locales/en/: common.json  index.json
src/localization/locales/lv/: common.json  index.json
src/pages/: generator.jsx  history.jsx  home.jsx  index.js  index.jsx  navigation.jsx  settings.jsx  textgen.jsx  uhoh.jsx
