[package]
name = "goggle-trans"
version = "0.0.1"
description = "A Tauri App"
authors = ["Blookers"]
license = ""
repository = ""
default-run = "goggle-trans"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.4", features = ["fs-all", "http-all", "notification-all", "path-all", "window-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
