[package]
name = "goggle-trans"
version = "2.6.0"
description = "A Tauri App"
authors = ["Blookers"]
license = ""
repository = ""
default-run = "goggle-trans"
edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["clipboard-read-text", "clipboard-write-text", "http-request", "path-all", "process-exit", "shell-open", "updater", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
